# Rust_MCS

./: .gitignore  Cargo.toml  README.md
benches/: benchmarks.rs
src/: add_basket.rs  basket_func.rs  check_box_bound.rs  chk_flag.rs  chk_locks.rs  csearch.rs  exgain.rs  feval.rs  helper_funcs.rs  hessian.rs  init_func.rs  lib.rs  lsearch.rs  mcs_cpu_par.rs  neighbor.rs  polint.rs  quadratic_func.rs  sign.rs  split_box.rs  split_box_for_par.rs  split_func.rs  splrnk.rs  strtsw.rs  test_functions.rs  triple.rs  updtf.rs  updtrec.rs  vertex_func.rs
src/gls/: helpers.rs  lsconvex.rs  lsdescent.rs  lsguard.rs  lsinit.rs  lslocal.rs  lsnew.rs  lspar.rs  lsquart.rs  lsrange.rs  lssat.rs  lssep.rs  lssort.rs  lssplit.rs  mod.rs  quartic.rs
src/mcs_utils/: add_basket.rs  basket.rs  basket1.rs  basket_func.rs  chk_locks.rs  csearch.rs  exgain.rs  genbox.rs  helper_funcs.rs  hessian.rs  init.rs  init_func.rs  initbox.rs  lsearch.rs  mod.rs  neighbor.rs  polint.rs  quadratic_func.rs  sign.rs  splinit.rs  split.rs  split_func.rs  split_input_box.rs  splrnk.rs  strtsw.rs  subint.rs  triple.rs  updtf.rs  updtrec.rs  vertex.rs
src/minq/: getalp.rs  ldldown.rs  ldlrk1.rs  ldlup.rs  minqsub.rs  mod.rs
