[package]
name = "Rust_MCS"
version = "0.1.0"
edition = "2024"

[dependencies]
nalgebra = "*"

#cargo flamegraph --unit-test -- tests::test_for_flamegraph_0
#[profile.release]
#debug = true

[dev-dependencies]
criterion = { version = "*", features = ["html_reports"] }
approx = "*"

[[bench]]
name = "benchmarks"
harness = false